2006-08-04  Alex Roitman  <shura@gramps-project.org>
	* src/FilterEditor/_EditFilter.py: Support invert attribute.
	* src/Filters/_GenericFilter.py: Support invert attribute.
	* src/Filters/_FilterList.py (save): Save invert attribute.
	* src/Filters/_FilterParser.py (startElement): Parse invert attribute.
	* src/Filters/Rules/Family/__init__.py (editor_rule_list): Import
	and use new rule.
	* src/Filters/Rules/Family/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/Filters/Rules/Family/_HasAttribute.py: Add new rule.
	* src/Filters/Rules/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/Filters/Rules/_HasAttributeBase.py: Add base module.
	* src/Filters/Rules/_HasEventBase.py (apply): Use new API.
	* src/Filters/Rules/Person/_HasFamilyEvent.py (apply): Use new API.
	* src/Filters/Rules/Person/_PersonWithIncompleteEvent.py
	(apply): Do not double-handle birth and death events.
	* src/Filters/Rules/Person/_IsWitness.py: Rewrite with new API.
	* src/FilterEditor/_FilterEditor.py (__init__): Remove unneeded
	argument, namespace is enough to get the filter class via factory;
	(add_new_filter): Use factory; (get_all_handles): Get handles for
	any object type.
	* src/FilterEditor/_ShowResults.py (get_name_id): Add method to
	return name and id for different object types;
	(sort_val_from_handle): Support different object types.
	(__init__): Accept namespace as an argument.
	* src/Filters/__init__.py: Do not expose GenericFamilyFilter;
	expose GenericFilterFactory instead.
	* src/Filters/_FamilySidebarFilter.py (GenericFamilyFilter): Use
	factory.
	* src/FilterEditor/_EditRule.py (MyID.name_from_gramps_id): Remove
	debugging output;
	(_name2typeclass): Add name->type mapping.

	* src/DataViews/_MediaView.py (row_change): Work around older pygtk.
	* src/Filters/Rules/Family/Makefile.am (pkgdata_PYTHON): Ship new
	files. 
	* src/Filters/Rules/Makefile.am (pkgdata_PYTHON): Ship new file.

2006-08-04  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>