@@ -18,7 +18,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 #
 
-# $Id: _HasAttribute.py 6529 2006-05-03 06:29:07Z rshura $
+# $Id$
 
 #-------------------------------------------------------------------------
 #
@@ -32,27 +32,16 @@ from gettext import gettext as _
 # GRAMPS modules
 #
 #-------------------------------------------------------------------------
-from RelLib import FamilyRelType
-from Filters.Rules._Rule import Rule
+from Filters.Rules._MatchesFilterBase import MatchesFilterBase
 
 #-------------------------------------------------------------------------
 #
-# HasAttribute
+# MatchesFilter
 #
 #-------------------------------------------------------------------------
-class HasRelType(Rule):
-    """Rule that checks for a person with a particular personal attribute"""
+class MatchesFilter(MatchesFilterBase):
+    """Rule that checks against another filter"""
 
-    labels      = [ _('Relationship type:') ]
-    name        = _('Family with the relationship type')
-    description = _("Matches family with the relationship type "
-                    "of a particular value")
-    category    = _('General filters')
-
-    def apply(self, db, family):
-        if not self.list[0]:
-            return False
-        else:
-            specified_type = FamilyRelType()
-            specified_type.set_from_xml_str(self.list[0])
-            return family.get_relationship() == specified_type
+    name        = _('Events matching the <filter>')
+    description = _("Matches events macthed by the specified filter name")
+    namespace   = 'Event'
